[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "player-tiddlywiki"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = ['tiddlywiki-parser>=1.1.0']

[project.scripts]
player-wiki = "main:main"
